Crash selecting 3D tracking marker #90651

Closed
opened 2021-08-13 16:12:04 +02:00 by James Horsley · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: 1eb06de260
Worked: (newest version of Blender that worked as expected)

Short description of error
When selecting a 3D camera tracking marker in the 3D viewport Blender crashes

Exact steps for others to reproduce the error
In the 3D viewport, select one of the tracking marker empties
TrackingCrash.blend

TrackingCrash.crash.txt

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: `1eb06de260` Worked: (newest version of Blender that worked as expected) **Short description of error** When selecting a 3D camera tracking marker in the 3D viewport Blender crashes **Exact steps for others to reproduce the error** In the 3D viewport, select one of the tracking marker empties [TrackingCrash.blend](https://archive.blender.org/developer/F10279849/TrackingCrash.blend) [TrackingCrash.crash.txt](https://archive.blender.org/developer/F10279854/TrackingCrash.crash.txt)
Author

Added subscriber: @mmdanggg2

Added subscriber: @mmdanggg2
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-08-13 16:18:06 +02:00
Member

Can confirm, will check.

Can confirm, will check.
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

This is because the scene camera is not set, viewport drawing then crashes (just noting as a workaround).

Talked to @Sergey and it is probably fine to remove the dependency on the scene camera altogether here (because there are other weirdnesses as well regarding selection if multiple cameras with differing solvers present).
Will try to do next week.

This is because the scene camera is not set, viewport drawing then crashes (just noting as a workaround). Talked to @Sergey and it is probably fine to remove the dependency on the scene camera altogether here (because there are other weirdnesses as well regarding selection if multiple cameras with differing solvers present). Will try to do next week.

This issue was referenced by 52fdf42d35

This issue was referenced by 52fdf42d352970d0bcc21f9978d1ac09ffba938a

This issue was referenced by 161e90f7ac

This issue was referenced by 161e90f7ac51a3f3e1b4a9685caf9cd5d559bbf8

This issue was referenced by 9564b6cf23

This issue was referenced by 9564b6cf2388fc869608f32a77cbc18032810e58
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90651
No description provided.